# agentics-foundation-video-clip-rs

./: .gitignore  BROWSER_CLIPPER_GUIDE.md  CONVERSION_SUMMARY.md  Cargo.toml  README.md  RUST_CONVERSION_ARCHITECTURE.md  USAGE_GUIDE.md  audio-sync-quality-analyzer.html  audio-validation-test-plan.md  browser-compatibility-matrix.md  browser-compatibility-validator.html  demo.js  index.html  index_advanced.html  index_simple.html  index_working.html  package-lock.json  package.json  setup.sh  standalone.html  start.sh  test-video-generator.html  test_interfaces.html  test_upload.html  upload.html
examples/: audio_test.rs
src/: error.rs  ffmpeg.rs  lib.rs  main.rs  time_parser.rs  video_clipper.rs  wasm.rs
tests/: integration_tests.rs
