[package]
name = "video-clip-rs"
version = "0.1.0"
edition = "2021"
authors = ["Agentics Foundation"]
description = "High-performance video clipping tool with WebAssembly support"
license = "MIT"
repository = "https://github.com/globalbusinessadvisors/agentics-foundation-video-clip-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "video-clip"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"], optional = true }
colored = { version = "2.1", optional = true }
indicatif = { version = "0.17", optional = true }

# Time handling
chrono = "0.4"

# Path handling
dirs = "5.0"

# Async runtime (for CLI only)  
tokio = { version = "1.40", features = ["full"], optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Logging
log = "0.4"
env_logger = { version = "0.11", optional = true }
wasm-logger = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"
criterion = "0.5"

[features]
default = ["cli"]
cli = ["clap", "colored", "indicatif", "tokio", "env_logger"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "serde-wasm-bindgen", "web-sys", "js-sys", "getrandom", "wasm-logger", "console_error_panic_hook"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = "fat"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# WASM excludes dependencies that are incompatible
